# aviation-anomaly

./: .env.example  .gitignore  CHECKLIST_TOMORROW.md  CLAUDE.md  CRITICAL_REVIEW.md  GOOGLE_DRIVE_QUICKSTART.md  GOOGLE_DRIVE_SETUP.md  PAPER_DRAFT_SECTIONS.md  QUICKSTART.md  README.md  RESEARCH_DASHBOARD.md  ROADMAP.md  pyproject.toml  requirements.txt  research_proposal.md
config/: default.yaml
experiments/: RESEARCH_LOG.md
experiments/001_baseline_bert/: README.md  config.yaml  run.py
experiments/002_bert_lstm/: ERROR_ANALYSIS.md  README.md  config.yaml  run.py
experiments/003_ensemble/: README.md  config.yaml  run.py
experiments/004_hierarchical/: QUICKSTART_OFFICE.md  README.md  config.yaml  run.py
experiments/005_change_point/: README.md  config.yaml  run.py
experiments/006_smote_augmented/: README.md  config.yaml  evaluate.py  run.py  run_simple.py
experiments/007_cost_sensitive_cascade/: README.md  config.yaml  run.py  test_checkpoint.py  test_data.py
experiments/templates/: config.yaml  experiment_template.md  run.py
models/: README.md
scripts/: add_temporal_labels.py  sync_drive.bat  sync_drive.sh
scripts/analysis/: generate_visualizations.py  statistical_testing.py
src/core/models/: bert_lstm.py
src/core/utils/: config.py
src/data/: load_data.py  preprocessing.py  smote_augmentation.py
src/models/: change_point_detector.py  focal_loss.py  hierarchical_transformer.py
src/scripts/: train.py
src/utils/: deepseek_client.py  drive_sync.py
