[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aviation-anomaly"
version = "0.1.0"
description = "Temporal Dynamics of Pilot Communication Before Aviation Accidents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mukhlis Amien", email = "mukhlis@stiki.ac.id"},
]
keywords = ["aviation", "anomaly-detection", "nlp", "transformer", "cvr"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
gpu = [
    "accelerate>=0.24.0",
    "peft>=0.6.0",
]
logging = [
    "tensorboard>=2.14.0",
    "wandb>=0.15.0",
]

[project.scripts]
aviation-preprocess = "src.scripts.preprocess:main"
aviation-train = "src.scripts.train:main"
aviation-evaluate = "src.scripts.evaluate:main"

[project.urls]
Homepage = "https://github.com/mukhlisamien/aviation-anomaly"
Repository = "https://github.com/mukhlisamien/aviation-anomaly"
Issues = "https://github.com/mukhlisamien/aviation-anomaly/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"
